# satvu-api-sdk

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE.md  catalog.json  dagger.json  hatch_build.py  openapi.json  openapi.json.py  otm.json  pyproject.toml  pyrightconfig.json  reseller.json
.dagger/: .gitignore  pyproject.toml
.dagger/src/satvu_api_sdk_ci/: __init__.py  main.py
.github/workflows/: pr.yml  release.yml
builder/: __init__.py  __main__.py  build.py  config.py  load.py  openapi.py  openapi_preprocessor.py  patches.py
builder/jinja_filters/: to_pydantic_model_field.py
builder/templates/: endpoint_module.py.jinja  model.py.jinja  models_init.py.jinja
builder/templates/macros/: disambiguate_union_response.jinja  return_annotation.jinja  runtime_type.jinja
builder/templates/property_templates/: list_property.py.jinja  model_property.py.jinja  union_property.py.jinja
docs/: OPENAPI_EXTENSIONS.md  TESTING.md  TYPED_ERRORS_GUIDE.md  authentication.md  error-handling.md  getting-started.md  http-backends.md  pagination.md  streaming-downloads.md  testing.md  typed-errors-guide.md
examples/: catalog.py  cos.py  id.py  otm.py  reseller.py  wallet.py
notebooks/: catalog.ipynb  cos.ipynb  cos.py.ipynb  id.ipynb  otm.ipynb  wallet.ipynb
scripts/: bootstrap.sh  lint.sh  test.sh
src/builder/: __main__.py  ast_generator.py  build.py  config.py  example_cache.py  load.py  pagination_detector.py  pagination_test_generator.py  patches.py  streaming_detector.py  streaming_post_processor.py  test_generator.py
src/builder/jinja_filters/: to_pydantic_model_field.py
src/builder/templates/: endpoint_module.py.jinja  test_module.py.jinja  test_schemas.py.jinja
src/catalog/: api.py
src/catalog/models/: __init__.py  and_or_expression.py  arithmetic_expression.py  asset.py  asset_raster_bands.py  asset_raster_bands_pixel_sampling_in_the_band.py  asset_raster_bands_statistics.py  bbox_literal.py  binary_comparison_predicate.py  collection.py  cql_2_queryables_schema.py  cql_2_queryables_schema_properties.py  date_instant.py  error.py  extent.py  feature.py  feature_assets.py  feature_properties.py  filter_.py  geo_json_geometry_collection.py  geo_json_geometry_collection_1.py  geo_json_line_string.py  geo_json_line_string_1.py  geo_json_multi_line_string.py  geo_json_multi_line_string_1.py  geo_json_multi_point.py  geo_json_multi_point_1.py  geo_json_multi_polygon.py  geo_json_multi_polygon_1.py  geo_json_point.py  geo_json_point_1.py  geo_json_polygon.py  geo_json_polygon_1.py  geojson_crs.py  geojson_crs_properties.py  geojson_geometry.py  http_error.py  is_between_predicate.py  is_in_list_predicate.py  is_like_predicate.py  (+19 more)
src/cos/: api.py
src/cos/models/: __init__.py  download_order_contract_id_order_id_download_get_collections_type_0_item.py  feature_collection_order.py  feature_order.py  geo_json_geometry_collection_1_type.py  geojson_polygon.py  http_exception_response.py  http_validation_error.py  is_between_predicate.py  is_null_predicate.py  link.py  link_body_type_0.py  link_method.py  order.py  order_download_url.py  order_edit_payload.py  order_item_download_url.py  order_page.py  order_payload.py  order_submission_payload.py  point_geometry.py  polygon.py  polygon_1.py  polygon_geometry.py  price.py  reseller_feature_collection_order.py  reseller_order_payload.py  reseller_submission_order_payload.py  stac_metadata.py  stac_metadata_assets.py  stac_properties_v4.py  (+7 more)
src/demo/: main.py
src/id/: api.py
src/otm/: api.py
src/policy/: api.py
src/reseller/: api.py
src/satvu/: auth.py  core.py
src/satvu_api_sdk/: __init__.py  auth.py  auth_test.py  core.py  core_retry_test.py  core_streaming_test.py  core_test.py  result.py  sdk.py  utils.py
src/shared/: utils.py
src/wallet/: api.py
(+385 files in other folders)
