[project]
name = "satvu-api-sdk"
version = "0.0.0"
description = "SatVu API SDK"
readme = "README.md"
authors = [
    { name = "Christian Wygoda", email = "christian.wygoda@satellitevu.com" },
    { name = "James Harrison", email = "james.harrison@satellitevu.com" },
]
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "pydantic>=2.11.7"]

[project.optional-dependencies]
standard = ["appdirs>=1.4.4"]
http-urllib3 = ["urllib3>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "attr>=0.3.2",
    "httpx>=0.28.1",
    "notebook>=7.4.7",
    "openapi-python-client>=0.27.0",
    "pook>=2.1.0",
    "pytest>=8.3.4",
    "urllib3>=2.0.0",
]

[tool.fawltydeps]
ignore_unused = ["notebook"]

[tool.fawltydeps.custom_mapping]
satvu-api-sdk = ["satvu_api_sdk"]
