[project]
name = "satvu-api-sdk"
version = "0.0.0"
description = "SatVu API SDK"
readme = "README.md"
authors = [
    { name = "Christian Wygoda", email = "christian.wygoda@satellitevu.com" },
    { name = "James Harrison", email = "james.harrison@satellitevu.com" },
]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.11.7"]

[project.optional-dependencies]
standard = ["appdirs>=1.4.4"]
http-urllib3 = ["urllib3>=2.0.0"]
http-requests = ["requests>=2.32.0"]
http-httpx = ["httpx>=0.28.1"]

[build-system]
requires = [
    "hatchling",
    "openapi-python-client>=0.27.0",
    "httpx>=0.28.1",
    "attr>=0.3.2",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "attr>=0.3.2",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "openapi-python-client>=0.27.0",
    "pook>=2.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
    "requests>=2.32.0",
    "ruff>=0.14.3",
    "urllib3>=2.0.0",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/satvu_api_sdk"]

[tool.hatch.build.targets.wheel.force-include]
"src/builder" = "builder"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.envs.default.scripts]
build-sdk = "uv run python -m builder all"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle
    "F", # pyflakes
    "FURB", # refurb
    "I", # isort
    "SIM", # flake8-simplify
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "UP007" # x | y syntax
]

[tool.fawltydeps]
ignore_unused = ["dagger-io", "ruff", "toml", "pytest-cov"]
ignore_undeclared = [
    "builder",
    "dagger",
    "hatchling",
    "satvu_api_sdk", # Allow self-referencing imports in tests
    "toml",
]

[tool.fawltydeps.custom_mapping]
satvu-api-sdk = ["satvu_api_sdk"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "Cover"
omit = ["**/*_test.py", "**/conftest.py"]
